# pyroll-hill-spreading

./: README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/: hill_spreading.py
pyroll/hill_spreading/: hookimpls.py  hookspecs.py
tests/: test_solve.py  test_solve3.py  test_solve_pillar.py
