[project]
name = "pyroll-hill-spreading"
description = "Plugin for PyRolL providing the Hill spreading model."
authors = [
    { name="Christoph Renzing", email="christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
requires-python= ">=3.9, <4.0"
dependencies= [
    "pyroll-core ~= 3.0"
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-hill-spreading"
documentation = "https://github.com/pyroll-project/pyroll-hill-spreading/blob/main/docs/docs.pdf"

readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]




